Update start_url and scope in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "Ki's Tube",
   "short_name": "Good Youtube",
   "description": "Ki's YouTube video collection",
-  "start_url": "/youtube-collection.html",
+  "start_url": "/good-youtube/",
+  "scope": "/good-youtube/",
   "display": "standalone",
   "background_color": "#0f0f0f",
   "theme_color": "#1a1a1a",
