--- a/manifest.json
+++ b/manifest.json
@@ -10,12 +10,12 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'%3E%3Crect fill='%233ea6ff' width='192' height='192' rx='32'/%3E%3Cpath fill='white' d='M78 136V56l58 40z'/%3E%3C/svg%3E",
+      "src": "/good-youtube/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/svg+xml"
     },
     {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Crect fill='%233ea6ff' width='512' height='512' rx='85'/%3E%3Cpath fill='white' d='M208 364V148l154 108z'/%3E%3C/svg%3E",
+      "src": "/good-youtube/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/svg+xml"
     }
