Rename app from 'Ki's Tube' to 'KiTube'

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ki's Tube",
+  "name": "KiTube",
   "short_name": "Good Youtube",
   "description": "Ki's YouTube video collection",
   "start_url": "/good-youtube/",
